# arg-microtexts

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.openai/: hosting.json
app/: globals.css  layout.tsx  page.tsx
components/: EduExplorer.tsx  types.ts
derived/: source_audit.manifest.json
derived/adu/de/: original_gold.manifest.json
derived/alignments/: adu_de_en.tsv
derived/boundaries/: de_adu_gold.tsv  de_eduseg_de_adu_context_v1.tsv  de_eduseg_de_document_v1_adu_constrained.tsv  de_eduseg_de_document_v1_raw.tsv  de_secorel_disrpt_sentence_chunks_v1_adu_constrained.tsv  de_secorel_disrpt_sentence_chunks_v1_raw.tsv  en_multilayer_gold.tsv
derived/edu/en/: multilayer_gold.manifest.json
derived/scores/: de_eduseg_de_adu_context_v1.tsv  de_eduseg_de_document_v1.tsv  de_secorel_disrpt_sentence_chunks_v1.tsv
docs/: ANNOTATION.md  DATA_FORMAT.md  DECISIONS.md  EXPERIMENTS.md  EXPLORER.md  METHODOLOGY.md  ROADMAP.md
experiments/configs/: eduseg_de_adu_context_v1.toml  eduseg_de_document_v1.toml  secorel_disrpt_sentence_chunks_v1.toml
experiments/results/eduseg_de_adu_context_v1/: context_comparison.tsv  manifest.json  (+2 more)
public/data/: edu-explorer.json
tests/: test_corpus_pipeline.py  test_edu_explorer_data.py  test_eduseg_runner.py
tools/: __init__.py  audit_sources.py  build_edu_explorer_data.py  corpus_data.py  export_english_edus.py  export_german_adus.py  publish_eduseg_adu_ablation.py  publish_eduseg_run.py  publish_secorel_run.py  run_eduseg_de.py  run_eduseg_de_adu_ablation.py  run_secorel.py
(+296 files in other folders)
